--- a/index.html
+++ b/index.html
@@ -105,13 +105,22 @@
         <h2 class="task-headline">Чем мы занимаемся</h2>
         <ul class="task-list list">
           <li class="task-item">
+            <div class="task-box-headline">
             <img src="./images/img1.jpg" alt="руки на клавиатуре" width="370" />
+            <h3 class="task-item-headline">Десктопные приложения</h3>
+            </div>
           </li>
           <li class="task-item">
+            <div class="task-box-headline">
             <img src="./images/img2.jpg" alt="телефон в руке" width="370" />
+            <h3 class="task-item-headline">Мобильные приложения</h3>
+            </div>
           </li>
           <li class="task-item">
+            <div class="task-box-headline">
             <img src="./images/img3.jpg" alt="планшет в руке" width="370" />
+            <h3 class="task-item-headline">Дизайнерские решения</h3>
+            </div>
           </li>
         </ul>
         </div>
