--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,10 @@
         <ul class="portfolio-project-list list">
             <li class="portfolio-box">
               <a href="" class="portfolio-project-link link">
+                <div class="portfolio-wrap-box">
                 <img src="./images/imgPortfol_1.jpg" alt="" width="370">
+                <p class="portfolio-cover-box">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                </div>
                 <div class="portfolio-name">
                 <h2 class="portfolio-headline">Технокряк</h2>
                 <p class="portfolio-title">Веб-сайт</p>
@@ -59,7 +62,10 @@
             </li>
             <li class="portfolio-box">
               <a href="" class="portfolio-project-link link">
+                <div class="portfolio-wrap-box">
                 <img src="./images/imgPortfol_2.jpg" alt="" width="370">
+                <p class="portfolio-cover-box">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                </div>
                 <div class="portfolio-name">
                 <h2 class="portfolio-headline">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
                 <p class="portfolio-title">Дизайн</p>
@@ -68,7 +74,10 @@
             </li>
             <li class="portfolio-box">
               <a href="" class="portfolio-project-link link">
+                <div class="portfolio-wrap-box">
                 <img src="./images/imgPortfol_3.jpg" alt="" width="370">
+                <p class="portfolio-cover-box">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                </div>
                 <div class="portfolio-name">
                 <h2 class="portfolio-headline">Ресторан <span lang="en">Seafood</span></h2>
                 <p class="portfolio-title">Приложение</p>
@@ -77,7 +86,10 @@
             </li>
             <li class="portfolio-box">
               <a href="" class="portfolio-project-link link">
+                <div class="portfolio-wrap-box">
                 <img src="./images/imgPortfol_4.jpg" alt="" width="370">
+                <p class="portfolio-cover-box">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
                 <div class="portfolio-name">
                 <h2 class="portfolio-headline">Проект <span lang="en">Prime</span></h2>
                 <p class="portfolio-title">Маркетинг</p>
@@ -86,7 +98,10 @@
             </li>
             <li class="portfolio-box">
               <a href="" class="portfolio-project-link link">
+                <div class="portfolio-wrap-box">
                 <img src="./images/imgPortfol_5.jpg" alt="" width="370">
+                <p class="portfolio-cover-box">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                </div>
                 <div class="portfolio-name">
                 <h2 class="portfolio-headline">Проект <span lang="en">Boxes</span></h2>
                 <p class="portfolio-title">Приложение</p>
@@ -95,7 +110,10 @@
             </li>
             <li class="portfolio-box">
               <a href="" class="portfolio-project-link link">
+                <div class="portfolio-wrap-box">
                 <img src="./images/imgPortfol_6.jpg" alt="" width="370">
+                <p class="portfolio-cover-box">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                </div> 
                 <div class="portfolio-name">
                 <h2 class="portfolio-headline">Inspiration has no Borders</h2>
                 <p class="portfolio-title">Веб-сайт</p>
@@ -104,7 +122,10 @@
             </li>
             <li class="portfolio-box">
               <a href="" class="portfolio-project-link link">
+                <div class="portfolio-wrap-box">
                 <img src="./images/imgPortfol_7.jpg" alt="" width="370">
+                <p class="portfolio-cover-box">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                </div>
                 <div class="portfolio-name">
                 <h2 class="portfolio-headline">Издание <span lang="en">Limited Edition</span></h2>
                 <p class="portfolio-title">Дизайн</p>
@@ -113,7 +134,10 @@
             </li>
             <li class="portfolio-box">
               <a href="" class="portfolio-project-link link">
+                <div class="portfolio-wrap-box">
                 <img src="./images/imgPortfol_8.jpg" alt="" width="370">
+                <p class="portfolio-cover-box">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                </div>
                 <div class="portfolio-name">
                 <h2 class="portfolio-headline">Проект <span lang="en">LAB</span></h2>
                 <p class="portfolio-title">Маркетинг</p>
@@ -122,7 +146,10 @@
             </li>
             <li class="portfolio-box">
               <a href="" class="portfolio-project-link link">
+                <div class="portfolio-wrap-box">x
                 <img src="./images/imgPortfol_9.jpg" alt="" width="370">
+                <p class="portfolio-cover-box">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
                 <div class="portfolio-name">
                 <h2 class="portfolio-headline">Growing Business</h2>
                 <p class="portfolio-title">Приложение</p>
