--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <section class="hero">
         <div class="container">
          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-         <button type="button" class="hero-btn">Заказать услугу</button>
+         <button type="button" class="hero-btn" data-modal-open>Заказать услугу</button>
          </div>
         
         </section>
@@ -282,5 +282,14 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-close-btn" data-modal-close>
+          <svg class="icon-cross" width="11" height="11">
+          <use href="./images/icons.svg#icon-cross"></use>
+        </svg></button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
